<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aruma</string>
    <string name="title_activity_main_map_view">Map</string>
    <string name="text_my_routes">My routes</string>
    <string name="text_navigation">Navigation</string>
    <string name="text_cyclocomputer">Cyclometer</string>
    <string name="text_more">More</string>
    <string name="text_saved_points">Saved points</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_speed">Speed</string>
    <string name="text_time">Time</string>
    <string name="text_clock">Clock</string>
    <string name="text_km">km</string>
    <string name="cyclocomputer_tab_current">Current</string>
    <string name="cyclocomputer_tab_last_tour">Last tour</string>
    <string name="cyclocomputer_tab_summary">Summary</string>
    <string name="text_distance">Distance</string>
    <string name="text_altitude">Altitude</string>
    <string name="text_avg_speed">Average speed</string>
    <string name="text_name">Name</string>
    <string name="text_route">Route</string>
    <string name="text_history">History</string>
    <string name="text_import">Import</string>
    <string name="text_export">Export</string>
    <string name="test_speed_chart">Speed chart</string>
    <string name="text_altitude_chart">Altitude chart</string>
    <string name="text_map">Map</string>
    <string name="import_success_message">Data imported successfully!</string>
    <string name="export_success_message">Data exported successfully!</string>
    <string name="select_directory">Choose directory</string>

    <string name="edit_route_time_error_message">Provided time is not correct</string>
    <string name="not_empty_error_message">All fields are required</string>

    <string name="saved_place_creation_date">Added</string>

    <string name="details">Details</string>
    <string name="route_details_total_distance">Total distance</string>
    <string name="route_details_total_time">Total time</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>

    <string name="dialog_question_place">Are you sure you want to delete this place?</string>
    <string name="dialog_question_route">Are you sure you want to delete this route?</string>
    <string name="dialog_answer_yes">Yes</string>
    <string name="dialog_answer_no">No</string>
    <string name="dialog_question_lead_to_place">Do you want to start navigating to this point?</string>
    <string name="leading_to_text">Leading to:&#160;</string>

    <!-- find route fragment -->
    <string name="find_route">Find route</string>
    <string name="start_point">Starting point</string>
    <string name="end_point">End point</string>
    <string name="navigate">Navigate</string>
    <string name="navigate_provide_all_data">Provide both start point and end point.</string>
    <string name="extend_search_results">Extend search results</string>
    <string name="start_point_from_gps">Address from my location</string>
    <string name="cannot_obtain_location">Cannot obtain location (is GPS turned on?)</string>
</resources>
