<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cyclocomputer"
        android:enabled="true"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/text_cyclocomputer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_navigation"
        android:enabled="true"
        android:icon="@drawable/baseline_location_on_white_24dp"
        android:title="@string/text_navigation"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_my_routes"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/text_my_routes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_osm"
        android:enabled="true"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/text_osmdroid"
        app:showAsAction="ifRoom" />
</menu>