<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pg.groupproject.aruma.fragments.common.FindRouteFragment">

    <AutoCompleteTextView
        android:id="@+id/find_route_start_point_value"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_route_start_point_title"
        android:layout_marginTop="3dp"
        android:textColor="@color/font"
        android:textSize="24sp" />

    <AutoCompleteTextView
        android:id="@+id/find_route_end_point_value"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_route_start_point_value"
        android:layout_marginTop="37dp"
        android:textColor="@color/font"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/find_route_start_point_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_route_from_header"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:text="@string/start_point"
        android:textColor="@color/font"
        android:textSize="@dimen/fontSizeTitle" />

    <TextView
        android:id="@+id/find_route_from_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:drawablePadding="10dp"
        android:text="@string/find_route"
        android:textColor="#4CAF50"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/find_route_end_point_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_route_from_header"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="98dp"
        android:drawablePadding="10dp"
        android:text="@string/end_point"
        android:textColor="@color/font"
        android:textSize="@dimen/fontSizeTitle" />

</RelativeLayout>