<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pg.groupproject.aruma.fragments.MoreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20">

        <LinearLayout
            android:id="@+id/more_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/more_list_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/moreMarginItem"
                android:background="@drawable/element_background_border"
                android:clickable="true"
                android:padding="10dp"

                >

                <TextView
                    android:id="@+id/more_list_route_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@drawable/ic_route"
                    android:drawablePadding="40px"
                    android:text="@string/text_route"

                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizePrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/more_list_saved_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/moreMarginItem"
                android:background="@drawable/element_background_border"
                android:clickable="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/more_list_saved_points_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@drawable/ic_favourites"
                    android:drawablePadding="40px"
                    android:text="@string/text_saved_points"

                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizePrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/more_list_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/moreMarginItem"
                android:background="@drawable/element_background_border"
                android:clickable="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/more_list_history_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@drawable/ic_history"
                    android:drawablePadding="40px"
                    android:text="@string/text_history"

                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizePrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/more_list_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/moreMarginItem"
                android:background="@drawable/element_background_border"
                android:clickable="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/more_list_import_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@drawable/ic_import"
                    android:drawablePadding="40px"
                    android:text="@string/text_import"

                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizePrimary" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/more_list_export"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/moreMarginItem"
                android:background="@drawable/element_background_border"
                android:clickable="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/more_list_export_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@drawable/ic_export"
                    android:drawablePadding="40px"
                    android:text="@string/text_export"

                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizePrimary" />
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>
