<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context="pg.groupproject.aruma.fragments.history.HistoryDetailsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/history_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/historyMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/history_map_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_map"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />
                <fragment
                    android:id="@+id/history_map_map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@id/history_map_title"
                    tools:context=".fragments.DetailsFragment" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/history_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/historyMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/history_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_time"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />
                <TextView
                    android:id="@+id/history_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0:00"
                    android:textColor="@color/font"
                    android:layout_below="@id/history_time_title"
                    android:textSize="@dimen/fontSizeValue"
                    android:layout_marginTop="@dimen/historyMarginTopItemValue"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/history_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/historyMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/history_distance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_distance"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />
                <TextView
                    android:id="@+id/history_distance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 km"
                    android:textColor="@color/font"
                    android:layout_below="@id/history_distance_title"
                    android:textSize="@dimen/fontSizeValue"
                    android:layout_marginTop="@dimen/historyMarginTopItemValue"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/history_avgSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/historyMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/history_avgSpeed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_avg_speed"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />
                <TextView
                    android:id="@+id/history_avgSpeed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 km/h"
                    android:textColor="@color/font"
                    android:layout_below="@id/history_avgSpeed_title"
                    android:textSize="@dimen/fontSizeValue"
                    android:layout_marginTop="@dimen/historyMarginTopItemValue"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/history_altitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/historyMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/history_altitude_chart_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_altitude"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />


                <com.robinhood.spark.SparkView
                    android:id="@+id/history_altitude_chart"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/history_altitude_chart_title"
                    app:spark_lineColor="@color/primary_dark"
                    app:spark_scrubEnabled="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/history_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/historyMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/history_speed_chart_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_speed_chart"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />
                <com.robinhood.spark.SparkView
                    android:id="@+id/history_speed_chart"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/history_speed_chart_title"
                    app:spark_lineColor="@color/primary_dark"
                    app:spark_scrubEnabled="true"
                    />
            </RelativeLayout>



        </LinearLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
