<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pg.groupproject.aruma.fragments.cyclocomputer.CyclocomputerTabCurrentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cyclocomputer_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
            android:id="@+id/cyclocomputer_current_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cyclocomputerMarginItem"
                android:padding="5dp"
            >
            <TextView
                android:id="@+id/cyclocomputer_current_speed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_speed"
                android:textColor="@color/font"
                android:textSize="@dimen/fontSizeTitle"
                />
            <TextView
                android:id="@+id/cyclocomputer_current_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 km/h"
                android:textColor="@color/font"
                android:layout_below="@id/cyclocomputer_current_speed_title"
                android:textSize="@dimen/fontSizeValue"
                android:layout_marginTop="@dimen/cyclocomputerMarginTopItemValue"
                />
        </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cyclocomputer_current_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cyclocomputerMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/cyclocomputer_current_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_time"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />
                <TextView
                    android:id="@+id/cyclocomputer_current_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0:00"
                    android:textColor="@color/font"
                    android:layout_below="@id/cyclocomputer_current_time_title"
                    android:textSize="@dimen/fontSizeValue"
                    android:layout_marginTop="@dimen/cyclocomputerMarginTopItemValue"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cyclocomputer_current_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cyclocomputerMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/cyclocomputer_current_distance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_distance"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />
                <TextView
                    android:id="@+id/cyclocomputer_current_distance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 km"
                    android:textColor="@color/font"
                    android:layout_below="@id/cyclocomputer_current_distance_title"
                    android:textSize="@dimen/fontSizeValue"
                    android:layout_marginTop="@dimen/cyclocomputerMarginTopItemValue"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cyclocomputer_current_avgSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cyclocomputerMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/cyclocomputer_current_avgSpeed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_avg_speed"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />
                <TextView
                    android:id="@+id/cyclocomputer_current_avgSpeed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 km/h"
                    android:textColor="@color/font"
                    android:layout_below="@id/cyclocomputer_current_avgSpeed_title"
                    android:textSize="@dimen/fontSizeValue"
                    android:layout_marginTop="@dimen/cyclocomputerMarginTopItemValue"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cyclocomputer_current_altitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cyclocomputerMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/cyclocomputer_current_altitude_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_altitude"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />
                <TextView
                    android:id="@+id/cyclocomputer_current_altitude_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 m n.p.m"
                    android:textColor="@color/font"
                    android:layout_below="@id/cyclocomputer_current_altitude_title"
                    android:textSize="@dimen/fontSizeValue"
                    android:layout_marginTop="@dimen/cyclocomputerMarginTopItemValue"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cyclocomputer_current_clock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cyclocomputerMarginItem"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/cyclocomputer_current_clock_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_clock"
                    android:textColor="@color/font"
                    android:textSize="@dimen/fontSizeTitle"
                    />
                <TextView
                    android:id="@+id/cyclocomputer_current_clock_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textColor="@color/font"
                    android:layout_below="@id/cyclocomputer_current_clock_title"
                    android:textSize="@dimen/fontSizeValue"
                    android:layout_marginTop="@dimen/cyclocomputerMarginTopItemValue"
                    />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
